--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "files": [
     "index.js",
-    "prettier.js"
+    "prettier.js",
+    "flow.js"
   ],
   "homepage": "https://github.com/cgiandi/eslint-config#readme",
   "repository": {
